[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/XP/XP2.png" type="Texture" id=1]
[ext_resource path="res://Objects/XP/XP.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 48.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="XP" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 1 )

[node name="CollectionArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionArea"]
shape = SubResource( 2 )

[node name="VanishTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="CollectionArea" to="." method="_on_CollectionArea_body_entered"]
[connection signal="timeout" from="VanishTimer" to="." method="_on_VanishTimer_timeout"]
